PT-78 add new temporary cache
